--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -39,7 +39,8 @@ $colors: (
   danger:     #f53d3d,
   light:      #f4f4f4,
   dark:       #222,
-  amarelo:    #f4df42
+  amarelo:    #f4df42,
+  fuschia:    #A239CA
 );
 
 
