--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -40,7 +40,7 @@ $colors: (
   light:      #f4f4f4,
   dark:       #222,
   amarelo:    #f4df42,
-  fuschia:    #A239CA
+  orange:     #f4b042
 );
 
 
